--- a/html/blog.html
+++ b/html/blog.html
@@ -35,16 +35,16 @@
   </header>
 
     <!-- Carrusel (Oculto en móviles) -->
-    <div id="carouselExample" class="carousel slide mb-5 d-none d-md-block" data-bs-ride="carousel">
+    <div id="carouselExample" class="carousel slide mb-5 d-none d-md-block h-50" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/carrousel3.jpg" class="d-block w-100" alt="Innovación en inteligencia artificial">
+          <img src="../img/carrousel3.jpg" class="d-block w-100" style="max-height: 50vh;" alt="Innovación en inteligencia artificial">
         </div>
         <div class="carousel-item">
-          <img src="../img/carrousel2.jpg" class="d-block w-100" alt="Soluciones IT disruptivas">
+          <img src="../img/carrousel2.jpg" class="d-block w-100" style="max-height: 50vh;" alt="Soluciones IT disruptivas">
         </div>
         <div class="carousel-item">
-          <img src="../img/carrousel1.jpg" class="d-block w-100" alt="Soporte técnico avanzado">
+          <img src="../img/carrousel1.jpg" class="d-block w-100" style="max-height: 50vh;" alt="Soporte técnico avanzado">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
