--- a/html/blog.html
+++ b/html/blog.html
@@ -34,28 +34,29 @@
     </nav>
   </header>
 
-    <!-- Carrusel (Oculto en móviles) -->
-    <div id="carouselExample" class="carousel slide mb-5 d-none d-md-block h-50" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="../img/carrousel3.jpg" class="d-block w-100" style="max-height: 50vh;" alt="Innovación en inteligencia artificial">
-        </div>
-        <div class="carousel-item">
-          <img src="../img/carrousel2.jpg" class="d-block w-100" style="max-height: 50vh;" alt="Soluciones IT disruptivas">
-        </div>
-        <div class="carousel-item">
-          <img src="../img/carrousel1.jpg" class="d-block w-100" style="max-height: 50vh;" alt="Soporte técnico avanzado">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Anterior</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Siguiente</span>
-      </button>
+    <!-- CARROUSEL -->
+<div id="carouselExample" class="carousel slide pagina__banner mb-5 d-none d-md-block" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../img/carrousel3.jpg" class="d-block w-100" alt="Innovación en inteligencia artificial">
     </div>
+    <div class="carousel-item">
+      <img src="../img/carrousel2.jpg" class="d-block w-100" alt="Soluciones IT disruptivas">
+    </div>
+    <div class="carousel-item">
+      <img src="../img/carrousel1.jpg" class="d-block w-100" alt="Soporte técnico avanzado">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Anterior</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  </button>
+</div>
+
+
 
       <!-- MAIN -->
   <main class="container my-4 flex-grow-1">
@@ -116,16 +117,22 @@
   </main>
 
   <!-- SECCIÓN FOOTER -->
-  <footer class="bg-dark text-white text-center py-3 mt-auto">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2">Aviso Legal</div>
-        <div class="col-md-2">Política de Privacidad</div>
-        <div class="col-md-2">Términos de Uso</div>
-        <div class="col-md-6">2024 Soluciones Informáticas.</div>
-      </div>
+  <footer class="pagina__pie_blog bg-dark text-white py-2 mt-5 d-flex flex-wrap justify-content-around align-items-center text-center">
+    <div class="p-2">
+        <a href="#" class="text-white text-decoration-none">Aviso Legal</a>
     </div>
-  </footer>
+    <div class="p-2">
+        <a href="#" class="text-white text-decoration-none">Política de Privacidad</a>
+    </div>
+    <div class="p-2">
+        <a href="#" class="text-white text-decoration-none">Términos de Uso</a>
+    </div>
+    <div class="p-2">
+        © 2024 Soluciones Informáticas
+    </div>
+</footer>
+
+
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
