--- a/index.html
+++ b/index.html
@@ -2,52 +2,75 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- SEO Meta Tags -->
   <meta name="description"
-    content="Soluciones Informáticas: Servicios IT integrados con inteligencia artificial para potenciar tu negocio." />
-  <meta name="keywords" content="tecnología, servicios IT, inteligencia artificial, desarrollo web, soporte técnico" />
-  <meta name="author" content="Soluciones Informáticas" />
+    content="Soluciones Informáticas ofrece servicios IT con inteligencia artificial para potenciar tu negocio. Desarrollo web, automatización y soporte técnico avanzado.">
+  <meta name="keywords"
+    content="tecnología, servicios IT, inteligencia artificial, desarrollo web, soporte técnico, automatización">
+  <meta name="author" content="Soluciones Informáticas">
+  <meta name="robots" content="index, follow">
+
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="Soluciones Informáticas - Servicios IT con IA">
+  <meta property="og:description" content="Potencia tu negocio con inteligencia artificial y soluciones IT avanzadas.">
+  <meta property="og:image" content="https://amalberto.github.io/BlogInformatica-74960/img/banner.jpg">
+  <meta property="og:url" content="https://amalberto.github.io/BlogInformatica-74960/">
+  <meta property="og:type" content="website">
+
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Soluciones Informáticas - Tecnología e IA">
+  <meta name="twitter:description"
+    content="Automatización, desarrollo web y soluciones IT inteligentes para tu negocio.">
+  <meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/banner.jpg">
+
+  <!-- FAVICON -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
   <title>Soluciones Informáticas - Inicio</title>
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <!-- Estilos personalizados -->
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body class="pagina">
   <!-- HEADER -->
-	<header class="pagina__encabezado">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
-			<div class="container">
-				<a class="navbar-brand" href="../index.html">Soluciones Informáticas</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav ms-auto gap-2">
-						<li class="nav-item">
-							<a class="nav-link" href="../index.html">Inicio</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="html/contacto.html">Contacto</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="html/sobre-nosotros.html">Sobre nosotros</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link active" href="html/servicios.html">Servicios</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="html/blog.html">Blog</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-	</header>
+  <header class="pagina__encabezado">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
+      <div class="container">
+        <a class="navbar-brand" href="../index.html">Soluciones Informáticas</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto gap-2">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="html/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="html/sobre-nosotros.html">Sobre nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="html/servicios.html">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="html/blog.html">Blog</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
   <div id="carouselExampleIndicators" class="carousel slide pagina__banner" data-bs-ride="carousel">
     <div class="carousel-indicators">
