--- a/html/servicios.html
+++ b/html/servicios.html
@@ -72,7 +72,7 @@
 	</header>
 
 	<!-- BANNER -->
-	<div id="carouselExampleIndicators" class="carousel slide pagina__banner" data-bs-ride="carousel">
+	<div id="carouselExampleIndicators" class="carousel slide pagina__banner d-none d-md-block" data-bs-ride="carousel">
 		<div class="carousel-indicators">
 			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
 				aria-current="true" aria-label="Slide 1"></button>
