--- a/html/blog.html
+++ b/html/blog.html
@@ -26,7 +26,7 @@
   <meta name="twitter:title" content="Blog de Tecnología - Soluciones Informáticas">
   <meta name="twitter:description"
     content="Noticias, tendencias y análisis sobre inteligencia artificial, desarrollo web y UX/UI.">
-  <meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel3.jpg">
+  <meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/banner_final.jpg">
 
   <!-- FAVICON -->
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
@@ -37,140 +37,141 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
 </head>
+
 <body>
-      <!-- Toggler de modo nocturno -->
-      <input type="checkbox" id="modoNocturnoCheckbox">
-      <label for="modoNocturnoCheckbox" class="modo-nocturno-toggle">
-          <span class="slider"></span>
-      </label>
-<!-- HEADER -->
-<header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
-    <div class="container">
-      <a class="navbar-brand" href="../index.html">
-        <img src="/img/logo.png" alt="Logo">
-        Soluciones Informáticas
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-          <li class="nav-item"><a class="nav-link" href="sobre-nosotros.html">Sobre nosotros</a></li>
-          <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
-          <li class="nav-item"><a class="nav-link active" href="blog.html">Blog</a></li>
-        </ul>
+  <!-- Toggler de modo nocturno -->
+  <input type="checkbox" id="modoNocturnoCheckbox">
+  <label for="modoNocturnoCheckbox" class="modo-nocturno-toggle">
+    <span class="slider"></span>
+  </label>
+  <!-- HEADER -->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
+      <div class="container">
+        <a class="navbar-brand" href="../index.html">
+          <img src="/img/logo.png" alt="Logo">
+          Soluciones Informáticas
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+            <li class="nav-item"><a class="nav-link" href="sobre-nosotros.html">Sobre nosotros</a></li>
+            <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
+            <li class="nav-item"><a class="nav-link active" href="blog.html">Blog</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- CARROUSEL -->
+  <div id="carouselExample" class="carousel slide pagina__banner mb-5" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../img/carrousel3.jpg" class="d-block w-100" alt="Innovación en inteligencia artificial">
+      </div>
+      <div class="carousel-item">
+        <img src="../img/carrousel2.jpg" class="d-block w-100" alt="Soluciones IT disruptivas">
+      </div>
+      <div class="carousel-item">
+        <img src="../img/carrousel1.jpg" class="d-block w-100" alt="Soporte técnico avanzado">
       </div>
     </div>
-  </nav>
-</header>
-
-<!-- CARROUSEL -->
-<div id="carouselExample" class="carousel slide pagina__banner mb-5" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../img/carrousel3.jpg" class="d-block w-100" alt="Innovación en inteligencia artificial">
-    </div>
-    <div class="carousel-item">
-      <img src="../img/carrousel2.jpg" class="d-block w-100" alt="Soluciones IT disruptivas">
-    </div>
-    <div class="carousel-item">
-      <img src="../img/carrousel1.jpg" class="d-block w-100" alt="Soporte técnico avanzado">
-    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Anterior</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    </button>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Anterior</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-  </button>
-</div>
 
 
 
-<!-- MAIN -->
-<main class="container my-4 flex-grow-1">
-  <!-- Introducción -->
-  <section class="text-center mb-4">
-    <h1 class="mb-3">Bienvenido a nuestro Blog</h1>
-    <p class="mx-3">
-      Descubre las últimas tendencias en tecnología, inteligencia artificial y servicios IT. Te ofrecemos análisis,
-      consejos y novedades para impulsar tu negocio con soluciones innovadoras.
-    </p>
-  </section>
+  <!-- MAIN -->
+  <main class="container my-4 flex-grow-1">
+    <!-- Introducción -->
+    <section class="text-center mb-4">
+      <h1 class="mb-3">Bienvenido a nuestro Blog</h1>
+      <p class="mx-3">
+        Descubre las últimas tendencias en tecnología, inteligencia artificial y servicios IT. Te ofrecemos análisis,
+        consejos y novedades para impulsar tu negocio con soluciones innovadoras.
+      </p>
+    </section>
 
-  <!-- Últimas Publicaciones -->
-  <section>
-    <h2 class="text-center mb-4">Últimas Publicaciones</h2>
-    <div class="row g-4">
-      <!-- Artículo 1 -->
-      <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <div class="card-body d-flex flex-column">
-            <h3 class="card-title text-center">Cómo la IA Revoluciona el Desarrollo Web</h3>
-            <p class="card-text text-center text-muted">
-              Explora cómo la integración de inteligencia artificial está transformando el desarrollo y optimización
-              de sitios web para mejorar la experiencia del usuario.
-            </p>
-            <a href="#" class="btn btn-dark mt-auto">Leer más...</a>
+    <!-- Últimas Publicaciones -->
+    <section class="ultimas-publicaciones">
+      <h2 class="text-center mb-4 ">Últimas Publicaciones</h2>
+      <div class="row g-4">
+        <!-- Artículo 1 -->
+        <div class="col-md-4 p-2 ">
+          <div class="card h-100 shadow-sm p-2">
+            <div class="card-body d-flex flex-column align-items-center">
+              <h3 class="card-title text-center">Cómo la IA Revoluciona el Desarrollo Web</h3>
+              <p class="card-text text-center text-muted">
+                Explora cómo la integración de inteligencia artificial está transformando el desarrollo y optimización
+                de sitios web para mejorar la experiencia del usuario.
+              </p>
+              <a href="#" class="btn btn-dark mt-auto w-50">Leer más...</a>
+            </div>
+          </div>
+        </div>
+        <!-- Artículo 2 -->
+        <div class="col-md-4 p-2">
+          <div class="card h-100 shadow-sm p-2">
+            <div class="card-body d-flex flex-column align-items-center">
+              <h3 class="card-title text-center">Tendencias en UX/UI para la Era Digital</h3>
+              <p class="card-text text-center text-muted">
+                Descubre las mejores prácticas y herramientas que están definiendo el futuro del diseño de interfaces y
+                la experiencia de usuario.
+              </p>
+              <a href="#" class="btn btn-dark mt-auto w-50">Leer más...</a>
+            </div>
+          </div>
+        </div>
+        <!-- Artículo 3 -->
+        <div class="col-md-4 p-2">
+          <div class="card h-100 shadow-sm p-2 ">
+            <div class="card-body d-flex flex-column align-items-center">
+              <h3 class="card-title text-center">Optimización del Rendimiento Web con Tecnología Avanzada</h3>
+              <p class="card-text text-center text-muted">
+                Aprende estrategias y técnicas innovadoras para mejorar la velocidad y eficiencia de tu sitio web
+                utilizando soluciones IT de vanguardia.
+              </p>
+              <a href="#" class="btn btn-dark mt-auto w-50">Leer más...</a>
+            </div>
           </div>
         </div>
       </div>
-      <!-- Artículo 2 -->
-      <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <div class="card-body d-flex flex-column">
-            <h3 class="card-title text-center">Tendencias en UX/UI para la Era Digital</h3>
-            <p class="card-text text-center text-muted">
-              Descubre las mejores prácticas y herramientas que están definiendo el futuro del diseño de interfaces y
-              la experiencia de usuario.
-            </p>
-            <a href="#" class="btn btn-dark mt-auto">Leer más...</a>
-          </div>
-        </div>
-      </div>
-      <!-- Artículo 3 -->
-      <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <div class="card-body d-flex flex-column">
-            <h3 class="card-title text-center">Optimización del Rendimiento Web con Tecnología Avanzada</h3>
-            <p class="card-text text-center text-muted">
-              Aprende estrategias y técnicas innovadoras para mejorar la velocidad y eficiencia de tu sitio web
-              utilizando soluciones IT de vanguardia.
-            </p>
-            <a href="#" class="btn btn-dark mt-auto">Leer más...</a>
-          </div>
-        </div>
-      </div>
+    </section>
+  </main>
+
+  <!-- SECCIÓN FOOTER -->
+  <footer
+    class="pagina__pie_blog bg-dark text-white py-2 mt-5 d-flex flex-wrap justify-content-around align-items-center text-center">
+    <div class="p-2">
+      <a href="#" class="text-white text-decoration-none">Aviso Legal</a>
     </div>
-  </section>
-</main>
-
-<!-- SECCIÓN FOOTER -->
-<footer
-  class="pagina__pie_blog bg-dark text-white py-2 mt-5 d-flex flex-wrap justify-content-around align-items-center text-center">
-  <div class="p-2">
-    <a href="#" class="text-white text-decoration-none">Aviso Legal</a>
-  </div>
-  <div class="p-2">
-    <a href="#" class="text-white text-decoration-none">Política de Privacidad</a>
-  </div>
-  <div class="p-2">
-    <a href="#" class="text-white text-decoration-none">Términos de Uso</a>
-  </div>
-  <div class="p-2">
-    © 2024 Soluciones Informáticas
-  </div>
-</footer>
+    <div class="p-2">
+      <a href="#" class="text-white text-decoration-none">Política de Privacidad</a>
+    </div>
+    <div class="p-2">
+      <a href="#" class="text-white text-decoration-none">Términos de Uso</a>
+    </div>
+    <div class="p-2">
+      © 2024 Soluciones Informáticas
+    </div>
+  </footer>
 
 
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
