--- a/html/contacto.html
+++ b/html/contacto.html
@@ -26,7 +26,7 @@
 	<meta name="twitter:title" content="Contacto - Soluciones Informáticas">
 	<meta name="twitter:description"
 		content="Ponte en contacto con nosotros para recibir asesoramiento en inteligencia artificial y desarrollo IT.">
-	<meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/carrousel3.jpg">
+	<meta name="twitter:image" content="https://amalberto.github.io/BlogInformatica-74960/img/banner_final.jpg">
 
 	<!-- FAVICON -->
 	<link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
@@ -39,11 +39,11 @@
 </head>
 
 <body class="pagina contacto">
- <!-- Toggler de modo nocturno -->
- <input type="checkbox" id="modoNocturnoCheckbox">
- <label for="modoNocturnoCheckbox" class="modo-nocturno-toggle">
-   <span class="slider"></span>
- </label>
+	<!-- Toggler de modo nocturno -->
+	<input type="checkbox" id="modoNocturnoCheckbox">
+	<label for="modoNocturnoCheckbox" class="modo-nocturno-toggle">
+		<span class="slider"></span>
+	</label>
 	<!-- HEADER -->
 	<header class="pagina__encabezado">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
@@ -100,62 +100,33 @@
 				<img src="../img/carrousel1.jpg" class="d-block w-100" alt="Banner de soporte técnico experto">
 			</div>
 		</div>
-		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-			data-bs-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Anterior</span>
-		</button>
-		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-			data-bs-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Siguiente</span>
-		</button>
 	</div>
 
 	<!-- MAIN -->
 	<main class="pagina__contenido">
 		<div class="contenedor contacto__contenedor contenido__articulo text-center">
-			<!-- Introducción -->
-			<section class="contacto__introduccion">
-				<h1>Ponte en contacto con nosotros</h1>
-				<h2>
-					En Soluciones Informáticas estamos listos para ayudarte a transformar tu negocio con tecnología e
-					inteligencia artificial. Escríbenos y descubre cómo podemos impulsar tu éxito.
-					<hr>
-					<br>
-				</h2>
-			</section>
-
-			<!-- Formulario -->
 			<section class="contacto__formulario">
 				<h3>Formulario de contacto</h3>
-				<form class="formulario-grid">
+				<form class="formulario-personalizado">
 					<div class="nombre">
 						<label for="nombre">Nombre:</label>
-						<input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required />
+						<input type="text" id="nombre" name="nombre" class="campo-texto" placeholder="Tu nombre"
+							required />
 					</div>
 					<div class="email">
 						<label for="email">Correo Electrónico:</label>
-						<input type="email" id="email" name="email" placeholder="Tu correo electrónico" required />
+						<input type="email" id="email" name="email" class="campo-texto"
+							placeholder="Tu correo electrónico" required />
 					</div>
 					<div class="mensaje">
 						<label for="mensaje">Mensaje:</label>
-						<textarea id="mensaje" name="mensaje" rows="5" placeholder="Escribe tu mensaje aquí..."
-							required></textarea>
+						<textarea id="mensaje" name="mensaje" class="campo-texto" rows="5"
+							placeholder="Escribe tu mensaje aquí..." required></textarea>
 					</div>
 					<div class="boton">
-						<button type="submit" class="btn-enviar">Enviar</button>
+						<button type="submit" class="boton-enviar">Enviar</button>
 					</div>
 				</form>
-			</section>
-
-			<!-- Información adicional -->
-			<section class="contacto__info">
-				<h2>Información adicional</h2>
-				<p><strong>Correo:</strong> a.aguirremneny@solinf.com</p>
-				<p><strong>Teléfono:</strong> +54 381 618 2287</p>
-				<p><strong>Dirección:</strong> San Lorenzo 1612</p>
-				<p>San Miguel de Tucumán</p>
 			</section>
 		</div>
 	</main>
@@ -164,12 +135,9 @@
 	<footer class="pagina__pie">
 		<div><a href="#">Aviso Legal</a></div>
 		<div><a href="#">Política de Privacidad</a></div>
-		<div><a href="#">Términos y Condiciones</a></div>
+		<div><a href="#"">Términos y Condiciones</a></div>
 		<p>&copy; 2024 Soluciones Informáticas.</p>
-	</footer>
-
-	<!-- Bootstrap JS -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	  </footer>
 </body>
 
 </html>
