--- a/html/contacto.html
+++ b/html/contacto.html
@@ -138,6 +138,11 @@
 		<div><a href="#"">Términos y Condiciones</a></div>
 		<p>&copy; 2024 Soluciones Informáticas.</p>
 	  </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+
 </body>
 
 </html>
+
